# IS_24_ObjViewer

./: .gitignore  CMakeLists.txt  README.md
include/: Face.h  Material.h  Program.h  RenderGroup.h  Texture.h  tiny_obj_loader.h
include/glad/: glad.h
shaders/: Vert.vert  VertNorm.vert  VertNormTex.frag  VertNormTex.vert  fragmentShader.frag  simple.frag  sparse.frag  sparse.vert  vertexShader.vert
shaders/old/: 2d.frag  2d.vert  fragmentShader.frag  simple.vert
src/: Camera.cpp  Camera.h  LightingManager.cpp  LightingManager.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.h  Program.cpp  Program.h  RenderGroup.cpp  Window.cpp  Window.h  glad.c  main.cpp
temp/: Face.h  Material.h  Program.cpp  Program.h  RenderGroup.h  Texture.cpp  Texture.h  main.cpp
